# qt_counting_words

./: .gitignore  CMakeLists.txt  main.cpp  tags
